<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="5"
                          android:textSize="20sp"
                          android:text="@string/phoneNumber"/>
                <EditText android:id="@+id/phoneNumberEdit"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:textSize="16sp"
                          android:hint="@string/phoneNumberHint"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textSize="20sp"
                          android:layout_weight="5"
                          android:text="@string/password"/>
                <EditText android:id="@+id/passwordEdit"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:textSize="16sp"
                          android:hint="@string/passwordHint"
                          android:inputType="textPassword"/>
        </LinearLayout>
        <RadioGroup android:id="@+id/sexRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RadioButton android:id="@+id/male"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/male"
                             android:layout_margin="8dp"/>
                <RadioButton android:id="@+id/female"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/female"
                             android:layout_margin="8dp"/>

        </RadioGroup>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <CheckBox android:id="@+id/read"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/read"
                          android:layout_margin="8dp"/>
                <CheckBox android:id="@+id/playBall"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/playBall"
                          android:layout_margin="8dp"/>
                <CheckBox android:id="@+id/listenMusic"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/listenMusic"
                          android:layout_margin="8dp"/>
        </LinearLayout>
        <Spinner android:id="@+id/citySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"/>
        <Button android:id="@+id/registerButton"
                android:text="@string/register"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
</LinearLayout>
